--- a/HarpoonLoader/HarpoonLoader.vcxproj.filters
+++ b/HarpoonLoader/HarpoonLoader.vcxproj.filters
@@ -7,7 +7,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="harpoonloader.cpp">
+    <ClCompile Include="harpoonloader.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
